# wordle

./: Cargo.toml  README.md  words.json
src/: lib.rs  main.rs
